# api/api.go
@@ -56,7 +56,7 @@ func NewApi(r *gin.Engine, cfg *config.Config, store storage.StorageI, logger lo
 	r.GET("/order/:id", handler.GetByIdOrder)
 	r.GET("/order", handler.GetListOrder)
 	r.PUT("/order/:id", handler.UpdateOrder)
-	r.PATCH("/order/:id", handler.UpdateOrder)
+	r.PATCH("/order/:id", handler.UpdatePatchOrder)
 	r.DELETE("/order/:id", handler.DeleteOrder)
 
 	url := ginSwagger.URL("swagger/doc.json") // The url pointing to API definition
